--- a/src/Editor/Toolbar/Image/Component/styles.css
+++ b/src/Editor/Toolbar/Image/Component/styles.css
@@ -49,7 +49,11 @@
   font-size: 15px;
   align-items: center;
   justify-content: center;
-  background-color: #f1f1f1;
+  background-color: #444343;
+  color: aliceblue;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 1px 1px #444343;
+  border-radius: 4px;
   outline: 2px dashed gray;
   outline-offset: -10px;
   margin: 10px 0;
@@ -90,8 +94,12 @@
   width: 90%;
   height: 35px;
   margin: 15px 0 12px;
-  border: 1px solid #d3d2d2;
-  border-radius: 2px;
+  background-color: #444343;
+  color: aliceblue;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 1px 1px #444343;
+  border-radius: 4px;
+  padding-left: 4px;
   font-size: 15px;
   padding: 0 5px;
 }
@@ -106,14 +114,20 @@
   margin: 0 5px;
   width: 75px;
   height: 30px;
-  border: 1px solid #f1f1f1;
-  border-radius: 2px;
+  background-color: #444343;
+  color: aliceblue;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 1px 1px #444343;
+  padding: 4px;
+  border-radius: 5px;
   cursor: pointer;
-  background: white;
   text-transform: capitalize;
 }
 .toolbar-controls-image-modal-btn:hover {
-  box-shadow: 1px 1px 0px #bfbdbd;
+  background-color: aliceblue;
+  color: #444343;
+  border: 1px solid #444343;
+  box-shadow: 0px 0px 1px 1px#fff;
 }
 .toolbar-controls-image-modal-btn:active {
   box-shadow: 1px 1px 0px #bfbdbd inset;
@@ -122,7 +136,7 @@
   outline: none !important;
 }
 .toolbar-controls-image-modal-btn:disabled {
-  background: #ece9e9;
+  background: #707070;
 }
 .toolbar-controls-image-modal-spinner {
   position: absolute;
@@ -135,8 +149,12 @@
 .toolbar-controls-image-modal-alt-input {
   width: 95%;
   height: 20px;
-  border: 1px solid #d3d2d2;
-  border-radius: 2px;
+  background-color: #444343;
+  color: aliceblue;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 1px 1px #444343;
+  border-radius: 4px;
+  padding-left: 4px;
   font-size: 12px;
   padding-left: 5px;
 }
@@ -155,8 +173,12 @@
 .toolbar-controls-image-modal-size-input {
   width: 40%;
   height: 20px;
-  border: 1px solid #d3d2d2;
-  border-radius: 2px;
+  background-color: #444343;
+  color: aliceblue;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 1px 1px #444343;
+  border-radius: 4px;
+  padding-left: 4px;
   font-size: 12px;
   padding-left: 5px;
 }
