--- a/src/Editor/index.css
+++ b/src/Editor/index.css
@@ -1,7 +1,7 @@
 *,
 ::after,
 ::before {
-  box-sizing: unset !important;
+  box-sizing: border-box !important;
 }
 .DraftEditor-root {
   width: 100%;
